--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : John Doe Website
-tagline: Site Tagline
+title : Aldo Stracquadanio
+tagline: Coding forward
 author :
-  name : John Doe
-  email : john.doe@gitmail.org
-  github : johndoe
-  twitter : johndoe
-  feedburner : johndoefeedname
+  name : Aldo Stracquadanio
+  email : aldo.strac@gmail.com
+  github : Astrac
+  twitter : astr4c
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,7 +24,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://johndoe.github.io
+production_url : http://astrac.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -79,35 +78,35 @@ JB :
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
-  comments :
-    provider : false
-    disqus :
-      short_name : jekyllbootstrap
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
-      num_posts: 5
-      width: 580
-      colorscheme: light
+  # comments :
+  #   provider : false
+  #   disqus :
+  #     short_name : jekyllbootstrap
+  #   livefyre :
+  #     site_id : 123
+  #   intensedebate :
+  #     account : 123abc
+  #   facebook :
+  #     appid : 123
+  #     num_posts: 5
+  #     width: 580
+  #     colorscheme: light
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #        
-  analytics :
-    provider : google 
-    google : 
-        tracking_id : 'UA-***'
-    getclicky :
-      site_id : 
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
-    piwik :
-        baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
-        idsite : '1'                   # the id of the site on Piwik
+  # analytics :
+  #   provider : google
+  #   google :
+  #       tracking_id : 'UA-***'
+  #   getclicky :
+  #     site_id :
+  #   mixpanel :
+  #       token : '_MIXPANEL_TOKEN_'
+  #   piwik :
+  #       baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
+  #       idsite : '1'                   # the id of the site on Piwik
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
